# youtube_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
data/chroma_db/: chroma.sqlite3
data/whoosh/: MAIN_1qaut4zt57n7skd9.seg  MAIN_akroyz6w2yk6dipv.seg  MAIN_c9iyuhbg94jo2oa4.seg  MAIN_d2kobfe7n6bgay57.seg  MAIN_rerk514pj7u3xu9c.seg  MAIN_u0cz30jom3yxdldy.seg  MAIN_vcc3h63twde4i4s1.seg  MAIN_wkulg9ysoxaf3o7f.seg  MAIN_xphkayil9gud8t02.seg  _MAIN_0.toc  _MAIN_1.toc  _MAIN_8.toc  _MAIN_9.toc
src/: __init__.py  bootstrap.py
src/chains/: generation_chain.py  ingestion_chain.py  retrieval_chain.py
src/config/: contants.py  settings.py
src/retrievers/: base_retriever.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py
src/services/: chroma_service.py  chunking_service.py  document_service.py  embedding_service.py  indexing_service.py  llm_service.py  prompt_service.py  reranker_service.py  transcript_service.py  whoosh_service.py  youtube_service.py
tests/: test_bm25_retriever.py  test_chroma_service.py  test_chunking_service.py  test_dense_retriever.py  test_document_service.py  test_embedding_service.py  test_hybrid_reranker.py  test_hybrid_retriever.py  test_ingestion_chain.py  test_llm_service.py  test_prompt_service.py  test_reranker_service.py  test_retrieval_chain.py  test_transcript_service.py  test_video_exists.py  test_whoosh_search.py  test_whoosh_service.py  test_youtube_service.py
ui/: answer_panel.py  feature_cards.py  hero.py  knowledge_base.py  question_box.py  sidebar.py  streamlit_app.py
