[project]
name = "youtube-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "whoosh>=2.7.4",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]
